apps/test-rollout/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-rollout
  labels:
    kubernetes.io/metadata.name: test-rollout
    backstage.io/kubernetes-id: test-rollout
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
