apps/test-rollout/base/test-rollout-deploy.yaml
---
# create deployment for test-rollout
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: test-rollout
  namespace: test-rollout
  labels:
    app: test-rollout
    version: 0.0.1
    backstage.io/kubernetes-id: test-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-rollout
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test-rollout
        version: 0.0.1
        backstage.io/kubernetes-id: test-rollout
    spec:
      containers:
      - name: test-rollout
        image: diegoluisi/test-rollout:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
