apps/test-rollout/base/test-rollout-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-rollout-svc
  namespace: test-rollout
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test-rollout.diegoluisi.eti.br
  labels:
    app: test-rollout
    version: 0.0.1
    backstage.io/kubernetes-id: test-rollout
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: test-rollout
