apps/test-rollout/base/test-rollout-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-rollout-vs
  namespace: test-rollout
  labels:
    app: test-rollout
    version: 0.0.1
    backstage.io/kubernetes-id: test-rollout
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - test-rollout.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: test-rollout-svc
      weight: 100
